spacing and containment issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,6 +77,7 @@ nav {
 .body a {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .container {
@@ -155,6 +156,7 @@ h5 {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  border-bottom: 1px solid black;
   margin-bottom: 10px;
 }
 
